--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body {
 a, button, a *, button * {
   cursor: pointer;
   -webkit-transition: all .3s linear;
+  -o-transition: all .3s linear;
   transition: all .3s linear; }
 
 .wrapper {
@@ -91,9 +92,8 @@ a, button, a *, button * {
 
 .container {
   padding: 0 20px;
-                /*
-position: relative;*/
-  z-index: 2; }
+  position: relative;
+  z-index: 5; }
   .container_wrp {
     max-width: 1230px;
     overflow: hidden;
@@ -113,10 +113,17 @@ position: relative;*/
   color: #ffffff;
   font-size: 60px;
   line-height: 113%;
-  font-weight: normal; }
+  font-weight: normal;
+  margin: 0 0 35px 0; }
+  @media (max-width: 991.98px) {
+    .h1 {
+      font-size: 50px; } }
   @media (max-width: 767.98px) {
     .h1 {
       font-size: 45px; } }
+  @media (max-width: 767.98px) {
+    .h1 {
+      font-size: 35px; } }
 
 .h2 {
   font-size: 40px;
@@ -139,6 +146,7 @@ position: relative;*/
   text-transform: uppercase;
   padding: 15px 32px;
   -webkit-transition: background ease-out 0.3s;
+  -o-transition: background ease-out 0.3s;
   transition: background ease-out 0.3s; }
   .btn_peridot {
     background: #93ea20;
@@ -162,7 +170,8 @@ position: relative;*/
   .text_flag {
     color: #93ea20;
     font-size: 28px;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin: 0 0 35px 0; }
     @media (max-width: 767.98px) {
       .text_flag {
         font-size: 20px; } }
@@ -240,30 +249,146 @@ position: relative;*/
     z-index: 7777; }
 
 .top {
-  padding: 76px 0 86px 0;
-  background: #004550; }
+  padding: 74px 0 40px 0;
+  background: #004550;
+  position: relative; }
   .top__column:first-child {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-    background: url("../img/bg/computer.png") 100% 100%/305px 305px no-repeat; }
-  .top__column:nth-child(2) {
+        -ms-flex: 0 1 38%;
+            flex: 0 1 38%;
+    position: relative; }
+  .top__column:last-child {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 37%;
-            flex: 0 1 37%; }
+        -ms-flex: 0 1 37.7%;
+            flex: 0 1 37.7%;
+    padding: 0px 0 0px 5.8%;
+    margin: 0 0 46px 0; }
+  @media (max-width: 767.98px) {
+    .top .row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .top__column:first-child {
+      -webkit-box-flex: 1;
+          -ms-flex: 1 0 40%;
+              flex: 1 0 40%;
+      margin: 0 0 60px 0; }
+    .top__column:last-child {
+      -webkit-box-flex: 1;
+          -ms-flex: 1 0 60%;
+              flex: 1 0 60%;
+      padding: 20px 10% 0px 10%;
+      margin: 0 0 0 0; } }
+  @media (max-width: 479.98px) {
+    .top__column:last-child {
+      padding: 20px 0 0px 0; } }
 
- /*
 .bg {
-    &__right {
-        position: absolute;
+  position: absolute;
+  pointer-events: none; }
+  .bg img {
+    width: 100%;
+    height: auto; }
+  .bg__dark {
+    background: rgba(0, 0, 0, 0.2);
+    bottom: 0;
+    width: 100%;
+    height: 53%; }
+    @media (max-width: 480.98px) {
+      .bg__dark {
+        height: 48%; } }
+    @media (min-width: 768.98px) {
+      .bg__dark {
         height: 100%;
-        width: 20px;
-        background: red;
-    }
-}
-*/
+        top: 0;
+        left: 63%;
+        width: 37%; } }
+    @media (min-width: 1400px) {
+      .bg__dark {
+        left: 60%;
+        width: 40%; } }
+    @media (min-width: 1600px) {
+      .bg__dark {
+        left: 58.5%;
+        width: 41.5%; } }
+    @media (min-width: 1900px) {
+      .bg__dark {
+        left: 57.5%;
+        width: 42.5%; } }
+    @media (min-width: 2220px) {
+      .bg__dark {
+        left: 56.5%;
+        width: 43.5%; } }
+    @media (min-width: 2900px) {
+      .bg__dark {
+        left: 55%;
+        width: 45%; } }
+    @media (min-width: 3300px) {
+      .bg__dark {
+        left: 54.5%;
+        width: 45.5%; } }
+    @media (min-width: 4200px) {
+      .bg__dark {
+        left: 54%;
+        width: 46%; } }
+    @media (min-width: 4720px) {
+      .bg__dark {
+        left: 53%;
+        width: 47%; } }
+    @media (min-width: 6200px) {
+      .bg__dark {
+        left: 52.5%;
+        width: 47.5%; } }
+    @media (min-width: 7200px) {
+      .bg__dark {
+        left: 52%;
+        width: 48%; } }
+    @media (min-width: 9200px) {
+      .bg__dark {
+        left: 51.7%;
+        width: 48.3%; } }
+  .bg__left {
+    left: 0;
+    bottom: 0;
+    width: 8%;
+    max-width: 130px;
+    padding: 5px 0 0 10px; }
+    @media (max-width: 767.98px) {
+      .bg__left {
+        display: none; } }
+  .bg__right {
+    right: 0;
+    top: 0;
+    width: 5%;
+    max-width: 72px;
+    padding: 5px 0 0 0px; }
+  .bg__bottom {
+    left: 0;
+    top: 100%;
+    width: 8%;
+    max-width: 130px;
+    padding: 5px 0 0 10px; }
+    @media (max-width: 767.98px) {
+      .bg__bottom {
+        display: none; } }
+  .bg__img {
+    position: absolute;
+    left: 98%;
+    bottom: -10px;
+    width: 64.2%;
+    -webkit-animation: circle 5s linear infinite;
+            animation: circle 5s linear infinite; }
+    .bg__img img {
+      -webkit-animation: inner-circle 5s linear infinite;
+              animation: inner-circle 5s linear infinite; }
+    @media (max-width: 767.98px) {
+      .bg__img {
+        display: none; } }
+
 .logo {
-  width: 229px;
+  width: 50.7%;
+  max-width: 229px;
   margin: 0 0 80px 0; }
   .logo img {
     width: 100%;
@@ -272,15 +397,17 @@ position: relative;*/
 .form__title {
   color: #ffffff;
   font-size: 28px;
+  font-weight: normal;
   line-height: 129%;
-  margin: 0 0 25px 0; }
+  margin: 0px 0 31px 0; }
 .form__item {
   display: block;
   margin: 0 0 16px 0; }
 .form__input {
+  font-size: 16px;
   color: #999999;
   background: #ffffff;
-  padding: 12px;
+  padding: 15px 12px;
   width: 100%;
   border: none;
   outline: none; }
@@ -292,20 +419,70 @@ position: relative;*/
   width: 100%; }
 .form__agreement {
   color: #ffffff;
-  margin: 0 0 20px 0; }
+  margin: 0 0 45px 0; }
 @media (max-width: 767.98px) {
   .form__title {
     font-size: 22px; } }
+@media (max-width: 479.98px) {
+  .form__title {
+    font-size: 18px; }
+  .form__input {
+    font-size: 14px;
+    padding: 12px 12px; }
+  .form__agreement {
+    margin: 0 0 30px 0; } }
 
 .checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
-  .checkbox__input:focus {
-    -webkit-box-shadow: 0 0 15px #7a956b;
-            box-shadow: 0 0 15px #7a956b; }
+  .checkbox__input {
+    display: none; }
+    .checkbox__input:focus {
+      -webkit-box-shadow: 0 0 15px #7a956b;
+              box-shadow: 0 0 15px #7a956b; }
   .checkbox__label {
-    color: #ffffff; }
+    color: #ffffff;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    cursor: pointer; }
+    .checkbox__label:before {
+      content: "";
+      -ms-flex-item-align: start;
+          align-self: flex-start;
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 20px;
+              flex: 0 0 20px;
+      height: 20px;
+      background-color: #fff;
+      border-radius: 0;
+      margin: 0px 16px 0px 0px; }
+    .checkbox__label:after {
+      -webkit-transition: -webkit-transform 0.5s ease 0s;
+      transition: -webkit-transform 0.5s ease 0s;
+      -o-transition: transform 0.5s ease 0s;
+      transition: transform 0.5s ease 0s;
+      transition: transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+      content: "";
+      width: 14px;
+      height: 14px;
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      background-color: #004550;
+      -webkit-transform: scale(0);
+              -ms-transform: scale(0);
+          transform: scale(0); }
+
+.checkbox__input:checked + .checkbox__label::after {
+  -webkit-transform: scale(1);
+          -ms-transform: scale(1);
+      transform: scale(1); }
 
 .partners {
   padding: 88px 0 48px 0;
@@ -329,7 +506,17 @@ position: relative;*/
     .partners .column:first-child {
       -webkit-box-flex: 0;
           -ms-flex: 0 0 50%;
-              flex: 0 0 50%; }
+              flex: 0 0 50%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
     .partners .column:last-child {
       -webkit-box-flex: 0;
           -ms-flex: 0 0 46%;
@@ -340,12 +527,16 @@ position: relative;*/
       .partners .column:first-child {
         -webkit-box-flex: 0;
             -ms-flex: 0 0 100%;
-                flex: 0 0 100%; }
+                flex: 0 0 100%;
+        padding: 0 20%; }
       .partners .column:last-child {
         -webkit-box-flex: 0;
             -ms-flex: 0 0 100%;
                 flex: 0 0 100%;
         padding: 0; } }
+  @media (max-width: 479.98px) {
+    .partners .column:first-child {
+      padding: 0; } }
 
 .video {
   width: 100%;
@@ -360,7 +551,8 @@ position: relative;*/
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); }
+            -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); }
   .video__btn {
     position: absolute;
     width: 30%;
@@ -369,16 +561,37 @@ position: relative;*/
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     cursor: pointer;
     -webkit-transition: opacity ease-out 0.3s;
-    transition: opacity ease-out 0.3s; }
+    -o-transition: opacity ease-out 0.3s;
+    transition: opacity ease-out 0.3s;
+    z-index: 4; }
     .video__btn.hidden {
       opacity: 0;
       z-index: -1; }
     .video__btn img {
       width: 100%;
       height: auto; }
+  .video__dark {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    opacity: 0;
+    z-index: -1;
+    -webkit-transition: opacity ease-out 0.3s;
+    -o-transition: opacity ease-out 0.3s;
+    transition: opacity ease-out 0.3s; }
+    .video__dark.shown {
+      opacity: 1;
+      z-index: 0; }
 
 .experts {
   padding: 64px 0 93px 0; }
@@ -401,7 +614,8 @@ position: relative;*/
     height: auto;
     top: 0;
     right: 0%;
-    overflow: hidden; }
+    overflow: hidden;
+    pointer-events: none; }
     .expert__bg img {
       width: 100%;
       height: auto; }
@@ -463,7 +677,8 @@ position: relative;*/
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); }
+            -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); }
   @media (max-width: 479.98px) {
     .portrait {
       -webkit-box-flex: 0;
@@ -516,11 +731,41 @@ position: relative;*/
     color: #999999;
     font-size: 17px;
     -webkit-transition: color ease-out 0.3s;
+    -o-transition: color ease-out 0.3s;
     transition: color ease-out 0.3s; }
   @media (hover: hover) {
     .socicon__link:hover {
       color: #93ea20; } }
 
+@-webkit-keyframes circle {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+@keyframes circle {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+@-webkit-keyframes inner-circle {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg); } }
+@keyframes inner-circle {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg); } }
 @-webkit-keyframes gb-shake {
   0% {
     -webkit-transform: translate(0, 0);
@@ -537,7 +782,6 @@ position: relative;*/
   100% {
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0); } }
-
 @keyframes gb-shake {
   0% {
     -webkit-transform: translate(0, 0);
@@ -554,5 +798,3 @@ position: relative;*/
   100% {
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0); } }
-
-/*# sourceMappingURL=style.css.map */
