--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,9 +120,9 @@ a, button, a *, button * {
 }
 
 .container {
-    padding: 0 20px;/*
-    position: relative;*/
-    z-index: 2;
+    padding: 0 20px;
+    position: relative;
+    z-index: 5;
     &_wrp {
         max-width: 1230px;
         overflow: hidden;
@@ -142,8 +142,15 @@ a, button, a *, button * {
     font-size: 60px;
     line-height: 113%;
     font-weight: normal;
+    margin: 0 0 35px 0;
+    @media (max-width: $md2 + px) {
+        font-size: 50px;
+    }
     @media (max-width: $md3 + px) {
         font-size: 45px;
+    }
+    @media (max-width: $md3 + px) {
+        font-size: 35px;
     }
 }
 .h2 {
@@ -197,6 +204,7 @@ a, button, a *, button * {
         color: $peridot;
         font-size: 28px;
         text-transform: uppercase;
+        margin: 0 0 35px 0;
         @media (max-width: $md3 + px) {
             font-size: 20px;
         }
@@ -274,15 +282,18 @@ a, button, a *, button * {
 
 //=============================================
 .top {
-    padding: 76px 0 86px 0;;
+    padding: 74px 0 40px 0;
     background: #004550;
+    position: relative;
         &__column {
             &:first-child {
-                flex: 0 1 50%;
-                background: url('../img/bg/computer.png') 100% 100% / 305px 305px no-repeat;
+                flex: 0 1 38%;
+                position: relative;
             }
-            &:nth-child(2) {
-                flex: 0 1 37%;
+            &:last-child {
+                flex: 0 1 37.7%;
+                padding: 0px 0 0px 5.8%;
+                margin: 0 0 46px 0;
             }
         }
 
@@ -290,18 +301,141 @@ a, button, a *, button * {
 
 		&__content {
 		}
-}/*
+        @media (max-width: $md3 + px) {
+            .row {
+                flex-direction: column;
+            }
+            &__column {
+                &:first-child {
+                    flex: 1 0 40%;
+                    margin: 0 0 60px 0;
+                }
+                &:last-child {
+                    flex: 1 0 60%;
+                    padding: 20px 10% 0px 10%;
+                    margin: 0 0 0 0;
+                }
+            }
+        }
+        @media (max-width: $md4 + px) {
+            &__column {
+                &:last-child {
+                    padding: 20px 0 0px 0;
+                }
+            }
+        }
+}
 .bg {
+    position: absolute;
+    pointer-events: none;
+    img {
+        width: 100%;
+        height: auto;
+    }
+    &__dark {
+        background: rgba(0, 0, 0, 0.2);
+        bottom: 0;
+        width: 100%;
+        height: 53%;
+        @media (max-width: $md4 + 1 + px) {
+            height: 48%;
+        }
+        @media (min-width: $md3 + 1 + px) {
+            height: 100%;
+            top: 0;
+            left: 63%;
+            width: 37%;
+        }
+        @media (min-width: 1400px) {
+            left: 60%;
+            width: 40%;
+        }
+        @media (min-width: 1600px) {
+            left: 58.5%;
+            width: 41.5%;
+        }
+        @media (min-width: 1900px) {
+            left: 57.5%;
+            width: 42.5%;
+        }
+        @media (min-width: 2220px) {
+            left: 56.5%;
+            width: 43.5%;
+        }
+        @media (min-width: 2900px) {
+            left: 55%;
+            width: 45%;
+        }
+        @media (min-width: 3300px) {
+            left: 54.5%;
+            width: 45.5%;
+        }
+        @media (min-width: 4200px) {
+            left: 54%;
+            width: 46%;
+        }
+        @media (min-width: 4720px) {
+            left: 53%;
+            width: 47%;
+        }
+        @media (min-width: 6200px) {
+            left: 52.5%;
+            width: 47.5%;
+        }
+        @media (min-width: 7200px) {
+            left: 52%;
+            width: 48%;
+        }
+        @media (min-width: 9200px) {
+            left: 51.7%;
+            width: 48.3%;
+        }
+    }
+    &__left {
+        left: 0;
+        bottom: 0;
+        width: 8%;
+        max-width: 130px;
+        padding: 5px 0 0 10px;
+        @media (max-width: $md3 + px) {
+            display: none;
+        }
+    }
     &__right {
+        right: 0;
+        top: 0;
+        width: 5%;
+        max-width: 72px;
+        padding: 5px 0 0 0px;
+    }
+    &__bottom {
+        left: 0;
+        top: 100%;
+        width: 8%;
+        max-width: 130px;
+        padding: 5px 0 0 10px;
+        @media (max-width: $md3 + px) {
+            display: none;
+        }
+    }
+    &__img {
         position: absolute;
-        height: 100%;
-        width: 20px;
-        background: red;
+        left: 98%;
+        bottom: -10px;
+        width: 64.2%;
+        animation: circle 5s linear infinite;
+        img {
+            animation: inner-circle 5s linear infinite;
+        }
+        @media (max-width: $md3 + px) {
+            display: none;
+        }
     }
 }
-*/
+
 .logo {
-    width: 229px;
+    width: 50.7%;
+    max-width: 229px;
     margin: 0 0 80px 0;
     img {
         width: 100%;
@@ -320,8 +454,9 @@ a, button, a *, button * {
 		&__title {
             color: $white;
             font-size: 28px;
+            font-weight: normal;
             line-height: 129%;
-            margin: 0 0 25px 0;
+            margin: 0px 0 31px 0;
 		}
 
 		// .form__item
@@ -334,9 +469,10 @@ a, button, a *, button * {
 		// .form__input
 
 		&__input {
+            font-size: 16px;
             color: $grey;
             background: #ffffff;
-            padding: 12px;
+            padding: 15px 12px;
             width: 100%;
             border: none;
             outline: none;
@@ -352,11 +488,23 @@ a, button, a *, button * {
 
 		&__agreement {
             color: $white;
-            margin: 0 0 20px 0;
+            margin: 0 0 45px 0;
 		}
         @media (max-width: $md3 + px) {
             &__title {
                 font-size: 22px;
+            }
+        }
+        @media (max-width: $md4 + px) {
+            &__title {
+                font-size: 18px;
+            }
+            &__input {
+                font-size: 14px;
+                padding: 12px 12px;
+            }
+            &__agreement {
+                margin: 0 0 30px 0;
             }
         }
 }
@@ -365,7 +513,7 @@ a, button, a *, button * {
 		// .checkbox__input
 
 		&__input {
-
+            display: none;
 
             &:focus {
                 box-shadow: 0 0 15px #7a956b;
@@ -376,9 +524,36 @@ a, button, a *, button * {
 		// .checkbox__label
 
 		&__label {
-            color: $white;
+            color: #ffffff;
+            display: inline-flex;
+            align-items: center;
+            position: relative;
+            cursor: pointer;
+            &:before {
+                content: "";
+                align-self: flex-start;
+                flex: 0 0 20px;
+                height: 20px;
+                background-color: #fff;
+                border-radius: 0;
+                margin: 0px 16px 0px 0px;
+            }
+            &:after {
+                transition: transform 0.5s ease 0s;
+                content: "";
+                width: 14px;
+                height: 14px;
+                position: absolute;
+                top: 3px;
+                left: 3px;
+                background-color: #004550;
+                transform: scale(0);
+            }
 
 		}
+}
+.checkbox__input:checked + .checkbox__label::after {
+	transform: scale(1);
 }
 //=============================================
 .partners {
@@ -407,6 +582,9 @@ a, button, a *, button * {
         .column {
             &:first-child {
                 flex: 0 0 50%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
             }
             &:last-child {
                 flex: 0 0 46%;
@@ -418,9 +596,17 @@ a, button, a *, button * {
         .column {
             &:first-child {
                 flex: 0 0 100%;
+                padding: 0 20%;
             }
             &:last-child {
                 flex: 0 0 100%;
+                padding: 0;
+            }
+        }
+    }
+    @media (max-width: $md4 + px) {
+        .column {
+            &:first-child {
                 padding: 0;
             }
         }
@@ -451,6 +637,7 @@ a, button, a *, button * {
         transform: translate(-50%, -50%);
         cursor: pointer;
         transition: opacity ease-out 0.3s;
+        z-index: 4;
         &.hidden {
             opacity: 0;
             z-index: -1;
@@ -458,6 +645,22 @@ a, button, a *, button * {
         img {
             width: 100%;
             height: auto;
+        }
+    }
+    &__dark {
+        background: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        z-index: -1;
+        transition: opacity ease-out 0.3s;
+        &.shown {
+            opacity: 1;
+            z-index: 0;
         }
     }
 }
@@ -485,6 +688,7 @@ a, button, a *, button * {
         top: 0;
         right: 0%;
         overflow: hidden;
+        pointer-events: none;
         img {
             width: 100%;
             height: auto;
@@ -613,6 +817,14 @@ a, button, a *, button * {
     }
 }
 //=============================================
+@keyframes circle {
+    from { transform:rotate(0deg); }
+    to { transform:rotate(360deg); }
+}
+@keyframes inner-circle {
+    from { transform:rotate(0deg); }
+    to { transform:rotate(-360deg); }
+}
 @keyframes gb-shake {
     0% {
         transform: translate(0, 0);
